@@ -1,0 +1,56 @@
+.\"                                      Hey, EMACS: -*- nroff -*-
+.\" First parameter, NAME, should be all caps
+.\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
+.\" other parameters are allowed: see man(7), man(1)
+.TH AUTOKEY-GTK "1" "August 19, 2009"
+.\" Please adjust this date whenever revising the manpage.
+.\"
+.\" Some roff macros, for reference:
+.\" .nh        disable hyphenation
+.\" .hy        enable hyphenation
+.\" .ad l      left justify
+.\" .ad b      justify to both left and right margins
+.\" .nf        disable filling
+.\" .fi        enable filling
+.\" .br        insert line break
+.\" .sp <n>    insert n+1 empty lines
+.\" for manpage-specific macros, see man(7)
+.SH NAME
+autokey-run \- command-line execution utility for AutoKey
+.SH SYNOPSIS
+.B autokey-run
+.RI -[s|p|f] [name]
+.SH DESCRIPTION
+This manual page briefly documents the
+.B autokey-run
+command.
+.PP
+.\" TeX users may be more comfortable with the \fB<whatever>\fP and
+.\" \fI<whatever>\fP escape sequences to invode bold face and italics,
+.\" respectively.
+\fBautokey-run\fP A command-line execution utility for AutoKey, autokey-run
+allows you to initiate execution of phrases, scripts or folders from the command
+line.
+.br
+For more information refer to the online wiki at:
+    http://code.google.com/p/autokey/w/list
+.SH OPTIONS
+This program follows the usual GNU command line syntax, with long
+options starting with two dashes (`-').
+A summary of options is included below.
+.TP
+.B \-\-help
+Show summary of options.
+.TP
+.B \-l, \-\-script [name]
+Run a script with the specified name.
+.TP
+.B \-c, \-\-phrase [name]
+Paste a phrase with the specified name.
+.TP
+.B \-c, \-\-folder [name]
+Display a popup menu for the specified folder.
+.SH AUTHOR
+Chris Dekter.
+.PP
+This manual page was written by Chris Dekter <cdekter@gmail.com>.
